--- a/app-provider/src/main/resources/application.yml
+++ b/app-provider/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
-  port: 56010
+#  port: 56010
+  port: ${port:56010} #动态的端口 , 如果和56010重复端口,就以传入的,没重复就是56010
 
 spring:
   application:
@@ -10,6 +11,8 @@ spring:
       discovery:
       # 生产者 服务注册的地址
         server-addr: 127.0.0.1:8848
+        namespace: cf4991df-158c-4cc1-bf7b-a7dd32c3ea04 #指定空间注册,默认在public下
+        cluster-name: chryl # 指定集群的名字, 默认在DEFAULT下
 logging:
   level:
     root: info
