--- a/nacos-micro-service/api-gateway/pom.xml
+++ b/nacos-micro-service/api-gateway/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>api-gateway</artifactId>
+    <description>网关 请求的转发</description>
 
 
 </project>
