--- a/nacos-micro-service/application-1/pom.xml
+++ b/nacos-micro-service/application-1/pom.xml
@@ -38,7 +38,12 @@
             <artifactId>service-1-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!-- dubbo 调用 api -1 的接口实现类:从dobbo注册中心拉取api-1 的接口实现类 -->
+        <!-- app 要使用service 1 , service 2 的接口 -->
+        <dependency>
+            <groupId>com.chryl</groupId>
+            <artifactId>service-2-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>        <!-- dubbo 调用 api -1 的接口实现类:从dobbo注册中心拉取api-1 的接口实现类 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-dubbo</artifactId>
