--- a/nacos-micro-service/service-2/service-2-api/pom.xml
+++ b/nacos-micro-service/service-2/service-2-api/pom.xml
@@ -10,6 +10,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service-2-api</artifactId>
-
+    <description>单独作为dubbo接口,如果以后哪里用到dubbo服务,直接引入依赖即可</description>
 
 </project>
