--- a/nacos-micro-service/service-2/service-2-server/pom.xml
+++ b/nacos-micro-service/service-2/service-2-server/pom.xml
@@ -11,5 +11,27 @@
 
     <artifactId>service-2-server</artifactId>
 
-
+    <dependencies>
+        <!-- 该项目作为dubbo接口,引入接口依赖 -->
+        <dependency>
+            <groupId>com.chryl</groupId>
+            <artifactId>service-2-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!-- nacos discovery-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!-- nacos config -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+        <!-- cloud dubbo :将实现暴露给 dubbo -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-dubbo</artifactId>
+        </dependency>
+    </dependencies>
 </project>
