--- a/nacos-micro-service/application-1/src/main/resources/bootstrap.yml
+++ b/nacos-micro-service/application-1/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: application1
+    name: application1  #存储db,nosql等信息
   main:
     allow-bean-definition-overriding: true  #springBoot 2.1 需要设定,防止重复
   cloud:
